--- a/survey_form/templates/step2.html
+++ b/survey_form/templates/step2.html
@@ -24,11 +24,6 @@
 			</div>
 		</div>
 	</div>
-	<form action="" method="post">
-		{% csrf_token %}
-	    {{ form|crispy }}
-	    <a href="{% url 'step1' %}" class="btn button">Voltar</a>
-	    <input type="submit" class="btn button" value="Próxima">
-	</form>
+	{% crispy form %}
 </div>
 {% endblock %}
