--- a/survey_form/static/css/custom.css
+++ b/survey_form/static/css/custom.css
@@ -6,6 +6,9 @@ body {
 .font-size-12px {
   font-size: 12px !important;
 }
+.font-size-14px {
+  font-size: 14px !important;
+}
 .container {
   max-width: 90vw;
   width: 640px;
@@ -92,4 +95,68 @@ body {
 .button.submit {
   background-color: rgb(224, 69, 0);
   color: white;
+}
+.form-check-radio {
+  position: relative;
+}
+.form-check-radio .form-check-label {
+  padding-left: 2rem;
+}
+.form-check-radio.disabled .form-check-label {
+  color: #9A9A9A;
+  opacity: .5;
+  cursor: not-allowed;
+}
+.form-check-radio .form-check-sign::before {
+  font-family: 'FontAwesome';
+  content: "\f10c";
+  font-size: 22px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: inline-block;
+  position: absolute;
+  opacity: .50;
+}
+.form-check-radio input[type="radio"]+.form-check-sign:after,
+.form-check-radio input[type="radio"] {
+  opacity: 0;
+  -webkit-transition: opacity 0.3s linear;
+  -moz-transition: opacity 0.3s linear;
+  -o-transition: opacity 0.3s linear;
+  -ms-transition: opacity 0.3s linear;
+  transition: opacity 0.3s linear;
+  content: " ";
+  display: block;
+}
+.form-check-radio input[type="radio"]:checked+.form-check-sign::after {
+  font-family: 'FontAwesome';
+  content: "\f192";
+  position: absolute;
+  opacity: 1;
+  font-size: 22px;
+}
+.form-check-radio input[type="radio"]:checked+.form-check-sign::after {
+  opacity: 1;
+}
+.form-check-radio input[type="radio"]:disabled+.form-check-sign::before,
+.form-check-radio input[type="radio"]:disabled+.form-check-sign::after {
+  color: #9A9A9A;
+}
+.custom-inline-radioselect {
+  background-color: #f8f9fa;
+  margin-bottom: 4px;
+  border-radius: 4px;
+}
+.custom-inline-radioselect .form-label {
+  cursor: default;
+  pointer-events: all;
+  width: 120px;
+  padding: 8px;
+  text-align: left;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  font-size: 14px;
+  margin: 0;
+  flex-grow: 1.8;
+  min-height: 65px;
 }
