--- a/survey_form/templates/index.html
+++ b/survey_form/templates/index.html
@@ -5,6 +5,7 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
 </head>
 <body>
