--- a/survey_form/templates/step4.html
+++ b/survey_form/templates/step4.html
@@ -31,15 +31,6 @@
 			</div>
 		</div>
 	</div>
-	<form action="" method="post">
-		<div class="block-content mb-2">
-			<div class="block-body pt-4">
-				{% csrf_token %}
-			    {{ form|crispy }}
-			</div>
-		</div>
-	    <a href="{% url 'step3' %}" class="btn button">Voltar</a>
-	    <input type="submit" class="btn button" value="Próxima">
-	</form>
+	{% crispy form %}
 </div>
 {% endblock %}
