--- a/survey_form/templates/success.html
+++ b/survey_form/templates/success.html
@@ -2,6 +2,15 @@
 
 {% block form %}
 <div class="container">
-	<h1>Thanks!</h1>
+	<div class="block-cotent mt-5">
+		<div class="block-header">
+			<div class="header-title">
+				Success
+			</div>
+		</div>
+		<div class="block-body">
+			<h1>Thanks!</h1>
+		</div>
+	</div>
 </div>
 {% endblock %}
