--- a/survey_form/static/css/custom.css
+++ b/survey_form/static/css/custom.css
@@ -134,6 +134,7 @@ body {
   position: absolute;
   opacity: 1;
   font-size: 22px;
+  color: rgb(224, 69, 0)
 }
 .form-check-radio input[type="radio"]:checked+.form-check-sign::after {
   opacity: 1;
@@ -159,4 +160,9 @@ body {
   margin: 0;
   flex-grow: 1.8;
   min-height: 65px;
+}
+.custom-control-input:checked~.custom-control-label::before {
+  color: #fff;
+  border-color: rgb(224, 69, 0);
+  background-color: rgb(224, 69, 0);
 }
