--- a/survey_form/templates/bootstrap4/layout/custom_radioselect_inline.html
+++ b/survey_form/templates/bootstrap4/layout/custom_radioselect_inline.html
@@ -11,5 +11,9 @@
 
         {% include 'bootstrap4/layout/custom_radioselect.html' %}
     	</div>
+        
+        {% if field.errors %}
+            {% include 'bootstrap4/layout/field_errors_block.html' %}
+        {% endif %}
     </div>
 {% endif %}
